--- a/EWT-Seq2Seq-LSTM-Attention.ipynb
+++ b/EWT-Seq2Seq-LSTM-Attention.ipynb
@@ -25,7 +25,7 @@
         "id": "4By9dFCowLrC"
       },
       "source": [
-        "Wrote by Dr. **Laio Oriel Seman** and Dr. **Stefano Frizzo Stefenon**. \n",
+        "Dr. **Laio Oriel Seman** and Dr. **Stefano Frizzo Stefenon**. \n",
         "\n",
         "Trento, Italy, March 10, 2023.\n"
       ]
